--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.7",
     "mongoose-unique-validator": "^2.0.3",
