--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.7",
+    "mongoose-findorcreate": "^3.0.0",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.6",
